--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,22 @@ body {
   height: 1.5em;
 }
 
+html, body {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  margin: 0;
+  background: #393950;
+}
+
+input {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  width: 300px;
+  height: 35px;
+}
+
 .containers {
   width: 520px;
   margin: 20px auto;
