--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,7 @@ html, body {
   background: #393950;
 }
 
-/*body {
-  text-align: center;
-  font-family: courier;
-  background-image: url("../assets/image.jpeg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
-
+/*
 .my_social {
   position: absolute;
   top: 25px;
