--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,13 @@ html, body {
   background: #393950;
 }
 
-/*
 .my_social {
   position: absolute;
   top: 25px;
   left: 25px;
 }
 
-.my_social a {
+/*.my_social a {
   display: inline-block;
   height: 2.5em;
 }
