--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,11 @@ html, body {
   height: 2.5em;
 }
 
-/*.my_social a img {
+.my_social a img {
   height: 1.5em;
 }
 
-
+/*
 input {
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
