--- a/css/styles.css
+++ b/css/styles.css
@@ -29,12 +29,12 @@ input {
   height: 35px;
 }
 
-/*.containers {
+.containers {
   width: 520px;
   margin: 20px auto;
 }
 
-#contact h1 {
+/*#contact h1 {
   font-family: helvetica;
   font-weight: normal;
   text-align: center;
